# -BTK-Hackathon2026-EliteDevs

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  s -ExecutionPolicy RemoteSigned) ; (& cUserscerenDesktopprojedersbtk-BTK-Hackathon2026-EliteDevs-mainvenvScriptsActivate.ps1)
ai-worker/: Dockerfile  README.md  app.py  credit_assessment.py  eski_orchestrator.py  eski_risk_agent.py  example_response.json  pyproject.toml  requirements.txt  test_pivot.py
ai-worker/agents/: __init__.py  analysis_agent.py  compliance_agent.py  data_agent.py  risk_agent.py
ai-worker/core/: __init__.py  config.py  gemini.py  orchestrator.py
ai-worker/tools/: __init__.py  financial_data.py  news_sentiment.py  technical_analysis.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AgentReviewBoard.jsx  ApplicationOutcomeCard.jsx  ApprovalRecommendation.jsx  BatchResultsTable.jsx  BorrowerApplicationForm.jsx  CompanyCombobox.jsx  CreditScorecard.jsx  Dashboard.jsx  DefaultRiskAssessment.jsx  DocumentChecklist.jsx  ErrorMessage.jsx  FinancialMetrics.jsx  LoadingSpinner.jsx  TerminalLoading.jsx  ThemeToggle.jsx
frontend/src/store/: themeStore.js
frontend/src/tests/: App.batch.test.jsx  BatchResultsTable.test.jsx
frontend/src/utils/: creditMemoExport.js  mapBatchAnalyzeResponse.js
go-gateway/: Dockerfile  go.mod  go.sum
go-gateway/cmd/api/: main.go
go-gateway/internal/db/: sqlite.go
(+4 files in other folders)
